# cellworld_planner

./: .gitignore  CMakeLists.txt
catchtests/: weighted_random.cpp
config/: belief_state_creation.json  d10.s17_35.json  d10.s25_50.json  d10.s50_75.json  d100.s100_150.json  d100.s17_35.json  d100.s25_50.json  d100.s50_75.json  d100.s75_100.json  d100k.s100_150.json  d100k.s17_35.json  d100k.s25_50.json  d100k.s50_75.json  d100k.s75_100.json  d10k.s100_150.json  d10k.s17_35.json  d10k.s25_50.json  d10k.s50_75.json  d10k.s75_100.json  d11.s100_150.json  d11.s25_50.json  d12.s100_150.json  d12.s17_35.json  d12.s25_50.json  d12.s50_75.json  d13.s17_35.json  d13.s25_50.json  d14.s50_75.json  d15.s17_35.json  d15.s50_75.json  d15.s75_100.json  d16.s100_150.json  d16.s50_75.json  d17.s17_35.json  d17.s50_75.json  d18.s25_50.json  d19.s100_150.json  d19.s25_50.json  d19.s75_100.json  d1k.s100_150.json  (+44 more)
config/capture_parameters/: big  medium
config/old/: d10.s100_150.json  d10.s17_35.json  d10.s50_75.json  d10.s75_100.json  d100.s100_150.json  d100.s17_35.json  d100.s25_50.json  d100.s50_75.json  d100k.s100_150.json  d100k.s50_75.json  d100k.s75_100.json  d10k.s100_150.json  d10k.s35_35.json  d10k.s75_100.json  d11.s17_35.json  d11.s50_75.json  d11.s75_100.json  d12.s75_100.json  d13.s100_150.json  d13.s50_75.json  d13.s75_100.json  d14.s100_150.json  d14.s17_35.json  d14.s25_50.json  d14.s75_100.json  d15.s100_150.json  d15.s25_50.json  d16.s17_35.json  d16.s25_50.json  d16.s75_100.json  d17.s100_150.json  d17.s25_50.json  d17.s75_100.json  d18.s100_150.json  d18.s17_35.json  d18.s50_75.json  d18.s75_100.json  d19.s17_35.json  d19.s50_75.json  d1k.s17_35.json  (+51 more)
config/predator_parameters/: fast_00_randomness  fast_05_randomness  fast_10_randomness  fast_15_randomness  fast_20_randomness  fast_25_randomness  slow_0_randomness  slow_10_randomness
config/prey_parameters/: default
config/reward/: reward1  reward2
config/tree_search_parameters/: 10  100  1000  10000  100000  11000  12000  13000  14000  15  15000  16000  17000  18000  19000  20  200  2000  20000  200000  22500  25  25000  27500  300  3000  30000  32500  35000  37500  400  4000  40000  42500  45000  47500  5  50  500  5000  (+10 more)
config/worlds_lists/: best_performing_worlds  square_small_new
include/cellworld_planner/: agents.h  belief_state.h  belief_state_location.h  belief_state_variable_time.h  directed_tree_search.h  history_step.h  lppo.h  option.h  planner.h  predator.h  prey.h  simulation.h  static_data.h  statistics.h  thig_prey.h  tree_search.h  tree_search_location.h  world_creation.h
poster/: planning_results.csv  results_2.txt  thig_results.csv
python/: Step_additional_info.py  __info__.py  build.py  compare.py  concatenate.py  create_new_worlds.py  create_occupancy_maps.py  create_simulation_config.py  create_square_small_occlusions.py  drive.py  entropy_evolution.py  get_entropy_buckets_occlusion_count.py  missing.py  process_poster_data.py  result_browser.py  result_browser_v2.py  results.json  results_process.py  seeworld.py  show_data.py  show_simulation.py  show_state.py  sim_results.py  sim_results2.py  simulation_replay.py  test.py  test1.py
python/UI/: main.qml
python/setup/: setup.cfg  setup.py
python/src/: __init__.py  detector.py  episode_replay.py  simulation.py  video_writer.py
scripts/: ICRA  create_all_videos  create_lppos  create_new_worlds  create_options  create_paths  create_poster_worlds  create_predator_destinations  create_sim_files  create_simulations  create_spawn_locations  create_stats  create_videos.ps1  create_videos.sh  create_visibility  create_world_stats  download_results  group_sims  list_worlds  new_poster  parallel  plan_vs_thig  poster  prep_world  priority  run_low_to_high_sim  run_sim  run_sim_new_worlds  run_simulation  run_simulation_world
sim_config/: base_config_fast.json  base_config_slow.json
simulation_results/first_test/: results.json
simulation_results/plan_vs_thig/plan/10k/: comp.json
simulation_results/plan_vs_thig/thig/: comp.json
src/: belief_state.cpp  belief_state_location.cpp  belief_state_variable_time.cpp  directed_tree_search.cpp  history_step.cpp  lppo.cpp  option.cpp  planner.cpp  predator.cpp  prey.cpp  static_data.cpp  statistics.cpp  thig_prey.cpp  tree_search.cpp  tree_search_location.cpp  world_creation.cpp
src/tools/: compute_visual_complexity.cpp  continuous_space_simulation.cpp  create_belief_state.cpp  create_experiment.cpp  create_lppos.cpp  create_occlusions.cpp  create_options.cpp  create_paths.cpp  create_poster_worlds.cpp  create_predator_destinations.cpp  create_robot_occlusions.cpp  create_simulation.cpp  create_spawn_locations.cpp  create_statistics.cpp  create_thigmotaxis.cpp  create_visibility.cpp  create_world_statistics.cpp  process_poster_data.cpp  random_world_sim.cpp  show_data.cpp  show_stats.cpp  simulation.cpp  test_map_entropy.cpp  test_progress.cpp  thig_simulation.cpp
